@startuml
title Analysis Class Diagram
service.dbHelper::Person <|-- service.dbHelper::Client
service.dbHelper::Person <|-- service.dbHelper::Technician

service.dbHelper::PersonList <|-- service.dbHelper::ClientList
service.dbHelper::PersonList <|-- service.dbHelper::TechnicianList

service.domain::ServiceRequest --> "1" service.dbHelper::Technician
service.domain::ServiceRequest -left-> "1" service.dbHelper::Client

service.domain::ServiceRequestList ..> service.domain::IServiceRequestList : <<implement>>

service.domain::Controller --> "1" service.domain::ServiceRequest
service.domain::Controller --> "1" service.domain::IServiceRequestList

service.ui::AppUI .right.> service.ui::IUserInterface : <<implement>>
service.ui::ServiceRequestApp --> "1" service.ui::IUserInterface
service.ui::ServiceRequestApp .up.> "1" service.dbHelper::TechnicianList
service.ui::ServiceRequestApp .up.> "1" service.dbHelper::ClientList
service.ui::ServiceRequestApp ..> "1" service.ui::AppUI

abstract class service.dbHelper::Person{
 -id
 -name
 -address
 -contactNo
}

class service.dbHelper::Client{
 -address
 -contactNo
}

class service.dbHelper::Technician{
}

abstract class service.dbHelper::PersonList{
 #persons
}

class service.dbHelper::ClientList{
}

class service.dbHelper::TechnicianList{
}

class service.domain::ServiceRequest{
 -id
 -date
 -client
 -technician
 -serviceCharge
}

interface service.domain::IServiceRequestList{
}


class service.domain::ServiceRequestList{
 -serviceRequests
}

class service.domain::Controller{
 -requestList
 -serviceRequest
}

interface service.ui::IUserInterface{
 +setController(controller:Controller)
 +start()
}

class service.ui::AppUI{
 -controller
 -scanner
 -persons
}

class service.ui::ServiceRequestApp{
}
@enduml